--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset=utf-8>
   <title> what to create </title>
+  <link href="./first.css" rel="stylesheet" type="text/css">
 </head>
 <body>
   <h1>What to create next</h1>
