Class & Design to CSS
changed class + design from yesterday. Add color

--- a/index.html
+++ b/index.html
@@ -7,28 +7,12 @@
 </head>
 <body>
   <h1>What to create next</h1>
-  <div>
-    <div>
+  <div class="inputSection">
+    <div class="inputs">
       <input placeholder="yes"></input>
+    </div>
+    <button class="buttonOne">Try it out</button>
   </div>
-  <button>Try it out</button>
-</div>
-<button>next</button>
-</body>
-</body>
-<p>Interior</p>
-<img src="https://i.pinimg.com/564x/36/90/3e/36903e41dc16f854b1b1f19ffda26d50.jpg" alt="Furniture" width="250" height="400">
-</body>
-<img src="https://i.pinimg.com/564x/e6/f0/4b/e6f04b3b7ca57bf1df6e1ce30e6f0023.jpg" alt="Kitchen" width="250" height="400">
-</body>
-<img src="https://i.pinimg.com/564x/58/9f/6d/589f6db57e2e702882f0c87a51ffa30a.jpg" alt="Kitchen" width="250" height="400">
-</body>
-<p>Interior</p>
-<img src="https://i.pinimg.com/564x/36/90/3e/36903e41dc16f854b1b1f19ffda26d50.jpg" alt="Furniture" width="250" height="400">
+  <button class="butttonTwo">next</button>
 </body>
 </html>
-<form action="/action_page.php">
-  First name: <input type="text" name="fname"><br>
-  Last name: <input type="text" name="lname"><br>
-  <input type="submit" value="Submit">
-</form>
