--- a/index.html
+++ b/index.html
@@ -14,5 +14,9 @@
     <button class="buttonOne">Try it out</button>
   </div>
   <button class="butttonTwo">next</button>
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+  <script>
+  $(function() {
+    $('.resultSection').hide()
 </body>
 </html>
